--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -34,8 +34,11 @@ jobs:
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
 
+    - name: Compress-Archive
+      run: powershell Compress-Archive -Path "Release/version.dll" -DestinationPath "Release.zip"
+
     - name: Create a Release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "Release/version.dll"
+        artifacts: "Release.zip"
         token: ${{ secrets.GITHUB_TOKEN }}
